--- a/form.ui
+++ b/form.ui
@@ -39,15 +39,8 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_3">
-    <item row="0" column="1">
-     <widget class="QPushButton" name="TAXBUTTON">
-      <property name="text">
-       <string>Tax Modifications</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="4">
-     <spacer name="horizontalSpacer_23">
+    <item row="0" column="0">
+     <spacer name="horizontalSpacer_22">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
@@ -59,7 +52,14 @@
       </property>
      </spacer>
     </item>
-    <item row="1" column="0" colspan="5">
+    <item row="0" column="3">
+     <widget class="QPushButton" name="PRICEBUTTON">
+      <property name="text">
+       <string>Price Modifications</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0" colspan="6">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="frameShape">
        <enum>QFrame::NoFrame</enum>
@@ -1325,33 +1325,6 @@
       </widget>
      </widget>
     </item>
-    <item row="0" column="2">
-     <widget class="QPushButton" name="PRICEBUTTON">
-      <property name="text">
-       <string>Price Modifications</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="3">
-     <widget class="QPushButton" name="DRINKSBUTTON">
-      <property name="text">
-       <string>Drinks Modification</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <spacer name="horizontalSpacer_22">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
     <item row="2" column="0">
      <spacer name="verticalSpacer">
       <property name="orientation">
@@ -1365,6 +1338,40 @@
       </property>
      </spacer>
     </item>
+    <item row="0" column="5">
+     <spacer name="horizontalSpacer_23">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="0" column="2">
+     <widget class="QPushButton" name="TAXBUTTON">
+      <property name="text">
+       <string>Tax Modifications</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="4">
+     <widget class="QPushButton" name="DRINKSBUTTON">
+      <property name="text">
+       <string>Drinks Modification</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QPushButton" name="PARSEBUTTON">
+      <property name="text">
+       <string>Parse JSON</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -1373,7 +1380,7 @@
      <x>0</x>
      <y>0</y>
      <width>860</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
